--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ COPY package*.json ./
 
 ###  Installing dependencies
 
-RUN npm install --silent
+RUN npm install --silent --legacy-peer-deps
 
 # copy local files to app folder
 COPY . .
