--- a/learnerreport/templates/deployment.yaml
+++ b/learnerreport/templates/deployment.yaml
@@ -20,14 +20,23 @@ spec:
       containers:
         - name: {{ .Values.container.appName }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          {{- if .Values.livenessProbe.enabled }}
           livenessProbe:
             httpGet:
-            path: /
-            port: {{  .Values.containerPort }}
+              path: {{ .Values.livenessProbe.path }}
+              port: {{ .Values.container.port }}
+            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+          {{- end }}
+
+          {{- if .Values.readinessProbe.enabled }}
           readinessProbe:
             httpGet:
-            path: /
-            port: {{  .Values.containerPort }}
+              path: {{ .Values.readinessProbe.path }}
+              port: {{ .Values.container.port }}
+            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+          {{- end }}
 
           ports:
             - containerPort: {{ .Values.container.port }}
