Updated probe details values_be.yaml

--- a/learnerreport/values_be.yaml
+++ b/learnerreport/values_be.yaml
@@ -23,3 +23,14 @@ service:
   type: ClusterIP
   port: 3001
   targetPort: 3001
+livenessProbe:
+  enabled: false
+  path: /
+  initialDelaySeconds: 10
+  periodSeconds: 10
+
+readinessProbe:
+  enabled: false
+  path: /
+  initialDelaySeconds: 5
+  periodSeconds: 5
