--- a/learnerreport/values_fe.yaml
+++ b/learnerreport/values_fe.yaml
@@ -19,3 +19,15 @@ service:
   port: 80
   targetPort: 3000
   container_port: 30000
+
+livenessProbe:
+  enabled: false
+  path: /
+  initialDelaySeconds: 10
+  periodSeconds: 10
+
+readinessProbe:
+  enabled: false
+  path: /
+  initialDelaySeconds: 5
+  periodSeconds: 5
